--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.15.2
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.5.1
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -91,3 +92,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  
