--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.5.1
   table_calendar: ^3.2.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
